finished up till 03

--- a/index.html
+++ b/index.html
@@ -116,69 +116,23 @@
 
             I learnt a lot through this project, such as full stack development, proper use of OOP, using APIs, creating and optimising ML models, 
             using phone hardware (GPS and Cameras), data clearning & management, user-friendly and intuitive design, all while maintaining that the stakeholders are satisfied.
+            <br><br>
           </p>
+          <div class="relative" style="padding-top: 56.25%">
+            <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mePFA-zkgVY?si=wm_IywaCvtiENVAc" frameborder="0" …></iframe>
+          </div>
         </div>
 
 
-        <div id="indicators-carousel" class="relative w-1/2 ml-8" data-carousel="static">
-          <!-- Carousel wrapper -->
-          <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
-            <!-- Item 1 -->
-            <div class="hidden flex duration-700 bg-gray-800" data-carousel-item="active">
-
-              <img src="./assets/MelanomaScan/home_screen.png"
-                class="w-1/3" alt="...">
-              <img src="./assets/MelanomaScan/benign_classification.png"
-                class="w-1/3" alt="...">
-              <img src="./assets/MelanomaScan/environmental_risks.png"
-                class="w-1/3" alt="...">
-
-            </div>
-            <!-- Item 2 -->
-            <div class="hidden flex duration-700 bg-gray-800" data-carousel-item>
-              <img src="./assets/MelanomaScan/image_storage.png"
-              class="w-1/3" alt="...">
-            <img src="./assets/MelanomaScan/malignant_classification.png"
-              class="w-1/3" alt="...">
-            <img src="./assets/MelanomaScan/phenotype_risk.png"
-              class="w-1/3" alt="...">
-            </div>
-
+        <div class="ml-8 w-1/3">
+          <div class="flex w-1/2">
+            <img src="./assets/MelanomaScan/home_screen.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+            <img src="./assets/MelanomaScan/malignant_classification.png" alt="Work 1" class="w-full h-auto bg-gray-300">
           </div>
-          <!-- Slider indicators -->
-          <div class="absolute z-30 flex -translate-x-1/2 space-x-3 rtl:space-x-reverse bottom-5 left-1/2">
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="true" aria-label="Slide 1"
-              data-carousel-slide-to="0"></button>
-            <button type="button" class="w-3 h-3 rounded-full" aria-current="false" aria-label="Slide 2"
-              data-carousel-slide-to="1"></button>
+          <div class="flex w-1/2">
+            <img src="./assets/MelanomaScan/environmental_risks.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+            <img src="./assets/MelanomaScan/phenotype_risk.png" alt="Work 1" class="w-full h-auto bg-gray-300">
           </div>
-          <!-- Slider controls -->
-          <button type="button"
-            class="absolute top-0 start-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-            data-carousel-prev>
-            <span
-              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
-              <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M5 1 1 5l4 4" />
-              </svg>
-              <span class="sr-only">Previous</span>
-            </span>
-          </button>
-          <button type="button"
-            class="absolute top-0 end-0 z-30 flex items-center justify-center h-full px-4 cursor-pointer group focus:outline-none"
-            data-carousel-next>
-            <span
-              class="inline-flex items-center justify-center w-10 h-10 rounded-full bg-white/30 group-hover:bg-white/50 group-focus:ring-4 group-focus:ring-white group-focus:outline-none">
-              <svg class="w-4 h-4 text-white dark:text-gray-800 rtl:rotate-180" aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
-                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="m1 9 4-4-4-4" />
-              </svg>
-              <span class="sr-only">Next</span>
-            </span>
-          </button>
         </div>
 
 
@@ -194,14 +148,26 @@
 
       <div class="flex">
         <div class="w-1/3">
-          <img src="./assets/images/newspal_card_img.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+        
+        <img src="./assets/SinghLab/ConPLexDiagram.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+        
         </div>
         <div class="w-2/3 ml-8">
-          <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            Bring to the table win-win survival strategies to ensure proactive domination. User generated
-            content in real-time will have multiple touchpoints for offshoring.
+          <p class="mt-6 text-xl"> <!-- Added top padding to the text content -->
+            I'm currently working under <a class="link" href="https://singhlab.net"> <u>Dr Rohit Singh</u></a> 
+            about machine learning models for better drug development.
+            <br><br>
+            I am further developing the ConPLex deep learning protein language model, which takes in molecule-protein 
+            pairs and efficiently predicts the likelihood that the molecule and protein will interact in a desired manner.
+            <br><br>
+            I am currently improving its accuracy by training it on the LIT-PCBA proteins dataset to improve the model's 
+            prediction capabilities using <a class="link" href="https://paperswithcode.com/task/contrastive-learning"> <u>contrastive learning</u></a>.
+            The goal is to improve the 1-shot prediction capabilities, so that rare genetic diseases may be dealt with much more efficiently.
+            Also developing pipeline to allow non-technical biologists to use model to generate predictions.
+            <br><br>
           </p>
         </div>
+
       </div>
 
       <!-- SOLAR PANEL ARDUINO -->
@@ -215,12 +181,27 @@
       <div class="flex">
         <div class="w-2/3">
           <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            Bring to the table win-win survival strategies to ensure proactive domination. User generated
-            content in real-time will have multiple touchpoints for offshoring.
+            Solar panels are an emerging source of renewable energy, 
+            but they accumulate dust that decreases their efficiency significantly. 
+            Our team designed a solar panel dirtiness sensor for Dr. Mike Bergin (Duke University Professor) 
+            and Michael Valerino (Duke University PhD Student) to determine when solar panels require cleaning, 
+            in order to maximize energy output.
+            <br><br>
+            Existing industrial solutions are expensive (over $8,000) and large (around a meter in length). 
+            Additionally, previous teams have tackled this problem with a Raspberry Pi and a backup clock, 
+            which proved cumbersome and time-consuming to set up. With our solution, we hope to tackle these existing problems 
+            and create a low cost, easy to set up, functional sensor.
+            <br><br>
+            To mitigate the global problem of dust accumulation on solar panels, we created a small, 
+            easy to setup sensor that captures magnified photos of dust on a glass slide at specified time intervals.
           </p>
+          <div class="flex justify-center items-center w-full">
+            <img src="./assets/DustSensor/figLabels.png" alt="Work 1" class="w-2/5 h-auto max-w-full bg-gray-300">
+        </div>
         </div>
         <div class="w-1/3 ml-8">
-          <img src="path_to_your_placeholder_image.jpg" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <img src="./assets/DustSensor/fig1.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <img src="./assets/DustSensor/fig2.png" alt="Work 1" class="w-full h-auto bg-gray-300">
         </div>
       </div>
 
