--- a/index.html
+++ b/index.html
@@ -206,29 +206,43 @@
       </div>
 
       
-      <!-- Raiz Vertical Farms -->
+      <!-- Logisim CPU -->
 
       <div class="flex items-center mt-10">
         <div class="flex-grow border-t-2 border-black mr-4"></div> <!-- Horizontal line on the left -->
-        <h2 class="text-3xl font-bold pt-4">04_Raiz Vertical Farms</h2>
+        <h2 class="text-3xl font-bold pt-4">04_Logisim CPU</h2>
       </div>
 
       <div class="flex">
-        <div class="w-1/3">
-          <img src="./assets/images/newspal_card_img.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+        <div class="w-2/3">
+          <img src="./assets/Logisim/CPU.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <div class="flex w-1/2">
+            <img src="./assets/Logisim/Controller.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+            <img src="./assets/Logisim/MemoryLatch.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          </div>
         </div>
-        <div class="w-2/3 ml-8">
+        <div class="w-1/3 ml-8">
           <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            Bring to the table win-win survival strategies to ensure proactive domination. User generated
-            content in real-time will have multiple touchpoints for offshoring.
+            Built a fully functioning CPU in Logisim.
+            <br><br>
+            Designed and implemented a fully functioning 16-bit word addressed RISC architecture CPU in Logisim.
+            The CPU is based on the MIPS assembly language.
+            <br><br>
+            Can carry out basic ALU operations such as add, sub, and, not etc. as well as 
+            Program Counter based operations such as jumps (and links), jump returns and branching. 
+            Also dealt with load/storing words into main memory, and dealing with keyboard inputs and displaying outputs.
+            <br><br>
+            Built all components of the CPU from the ground up (using nothing but wires, D flip flops, and/not/or gates and control buffers) 
+            - ie the ALU, controller, shifters, register files, entire CPU pipeline.
+
           </p>
         </div>
       </div>
   
-      <!-- Logisim CPU -->
+      <!-- Raiz Vertical Farms -->
 
       <div class="flex items-center mt-10">
-        <h2 class="text-3xl font-bold pt-4">05_Logisim CPU</h2>
+        <h2 class="text-3xl font-bold pt-4">05_Raiz Vertical Farms</h2>
         <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
       </div>
 
@@ -236,31 +250,11 @@
       <div class="flex">
         <div class="w-2/3">
           <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            Bring to the table win-win survival strategies to ensure proactive domination. User generated
-            content in real-time will have multiple touchpoints for offshoring.
+            This is going to have info about my vertical farming internship.
           </p>
         </div>
         <div class="w-1/3 ml-8">
           <img src="path_to_your_placeholder_image.jpg" alt="Work 1" class="w-full h-auto bg-gray-300">
-        </div>
-      </div>
-
-      <!-- Raiz Vertical Farms -->
-
-      <div class="flex items-center mt-10">
-        <div class="flex-grow border-t-2 border-black mr-4"></div> <!-- Horizontal line on the left -->
-        <h2 class="text-3xl font-bold pt-4">06_Air Filter Research</h2>
-      </div>
-
-      <div class="flex">
-        <div class="w-1/3">
-          <img src="./assets/images/newspal_card_img.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-        </div>
-        <div class="w-2/3 ml-8">
-          <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            Bring to the table win-win survival strategies to ensure proactive domination. User generated
-            content in real-time will have multiple touchpoints for offshoring.
-          </p>
         </div>
       </div>
 
@@ -295,8 +289,11 @@
         <p class="mt-4 text-xl">[Desc]</p>
       </div>
       <div class="w-1/3">
-        <h3 class="text-2xl font-semibold border-t-2 border-black pt-4">TeensInAI mentor/teacher</h3>
-        <p class="mt-4 text-xl">[Mention NASA and BBC]</p>
+        <h3 class="text-2xl font-semibold border-t-2 border-black pt-4">Air Filter Project</h3>
+        <p class="mt-4 text-xl">[things things things things]
+          <br><br>
+          also could add an "other section" with stuff like art and skating and hikes?
+        </p>
       </div>
     </div>
   </section>
