small patch to prev push

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
       <div class="flex">
         <div class="w-2/3">
-          <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
+          <p class="mt-6 text-xl"> <!-- Added top padding to the text content -->
             Solar panels are an emerging source of renewable energy, 
             but they accumulate dust that decreases their efficiency significantly. 
             Our team designed a solar panel dirtiness sensor for Dr. Mike Bergin (Duke University Professor) 
