--- a/index.html
+++ b/index.html
@@ -248,15 +248,31 @@
 
 
       <div class="flex">
-        <div class="w-2/3">
+        <div class="w-1/3">
           <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
             This is going to have info about my vertical farming internship.
           </p>
         </div>
-        <div class="w-1/3 ml-8">
-          <img src="path_to_your_placeholder_image.jpg" alt="Work 1" class="w-full h-auto bg-gray-300">
+        <div class="w-2/3 ml-8">
+          <img src="assets/Raiz/Graphs.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <div class="flex h-1/5 mb-4">
+            <img src="assets/Raiz/ConceptFarm.png" alt="Work 1" class="bg-gray-300">
+            <img src="assets/Raiz/Hardware.png" alt="Work 1" class="bg-gray-300">
+          </div>
+
+          <div class="flex w-1/2 h-1/4">
+            <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="h-auto w-auto ml-5 mr-5 bg-gray-300">
+            <img src="assets/Raiz/Farm.png" alt="Work 1" class="bg-gray-300">   
+          </div>
+                   
         </div>
       </div>
+
+      <!-- 
+        <img src="assets/Raiz/ConceptFarm.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+
+       -->
 
     </div>
   </section>
