--- a/index.html
+++ b/index.html
@@ -248,31 +248,36 @@
 
 
       <div class="flex">
-        <div class="w-1/3">
-          <p class="mt-6 text-xl pt-8"> <!-- Added top padding to the text content -->
-            This is going to have info about my vertical farming internship.
+        <div class="w-2/3">
+          <p class="mt-6 text-xl"> <!-- Added top padding to the text content -->
+            I interned as a software engineer at <a class="link" href="https://www.raiz.farm"> <u>Raiz Vertical Farms</u></a> 
+            in the summer of 2023, which is a startup 
+            that is bringing vertical farms to urban cities, making produce much more environmentally friendly and healthier.
+            <br><br>
+            I collaborated directly with CTO to convert applications (a platform for farm resource management 
+            and allocation and models to optimise hydroponics) from prototype to production stage.
+            <br><br>
+            Transferred app from obsolete technologies to Mantine v7, hosting on fly.io with staging and 
+            production environments; Connected environments to postgres SQL database; Refactored old React 
+            code into new environments
           </p>
-        </div>
-        <div class="w-2/3 ml-8">
+          <div class="flex justify-center items-center pt-12"> 
+            <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="w-1/2">
+          </div>
           <img src="assets/Raiz/Graphs.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-          <div class="flex h-1/5 mb-4">
-            <img src="assets/Raiz/ConceptFarm.png" alt="Work 1" class="bg-gray-300">
-            <img src="assets/Raiz/Hardware.png" alt="Work 1" class="bg-gray-300">
+        </div>
+        <div class="w-1/3 ml-8">
+
+          <img src="assets/Raiz/ConceptFarm.png" alt="Work 1" class="bg-gray-300">
+
+          <div class="flex w-1/2">
+            <!-- <img src="./assets/Raiz/ConceptFarm.png" alt="Work 1" class="h-auto bg-gray-300"> -->
+            <img src="./assets/Raiz/Hardware1.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+            <img src="./assets/Raiz/Hardware2.png" alt="Work 1" class="ml-5 w-full h-auto bg-gray-300">
           </div>
 
-          <div class="flex w-1/2 h-1/4">
-            <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="h-auto w-auto ml-5 mr-5 bg-gray-300">
-            <img src="assets/Raiz/Farm.png" alt="Work 1" class="bg-gray-300">   
-          </div>
-                   
         </div>
       </div>
-
-      <!-- 
-        <img src="assets/Raiz/ConceptFarm.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-          <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-
-       -->
 
     </div>
   </section>
