--- a/index.html
+++ b/index.html
@@ -95,52 +95,40 @@
     <div class="space-y-8">
 
       <!-- MELANOMA SCAN -->
+      <div>
       <div class="flex"> <!-- Increased bottom margin for more vertical spacing -->
         <div class="w-full">
-          <h2 class="text-3xl font-bold pt-4">01_Melanoma Scan</h2>
+          <h2 class="text-3xl font-bold pt-4"> <a class="link" href="projects/melanomaScan.html">01_Melanoma Scan</a></h2>
         </div>
       </div>
 
       <div class="flex">
         <div class="w-2/3">
           <p class="mt-0 text-xl pt-0"> <!-- Added top padding to the text content -->
-            Melanoma Scan is a an iOS app I developed to help diagnose skin cancer using just iPhone cameras.
-            Here's <a class="link" href="https://www.youtube.com/watch?v=mePFA-zkgVY"> <u>the app demo</u></a>.
+            <br>
+            Melanoma Scan is a an iOS app I developed to help diagnose skin cancer using just iPhone cameras. I developed everything
+            from the ground up myself, learning about machine learning models, app development, user interfaces, APIs, databases and more.
+            
             <br> <br>
 
-            I developed this app using XCode, and built the image classfication model with inspiration from the 
-            <a class="link" href="https://arxiv.org/abs/1512.00567"><u>Inception v3 model</u></a>. I have documented everything about developing
-             the app (from the ideation to stakeholder interviews to sprints & ticketing to testing and evaluation) <a class="link" href="melanomaScanDocumentation.html"><u>here</u></a>.
+            There is also a demo linked to the right.
+            <br> <br>
 
-            <br><br>
-
-            I learnt a lot through this project, such as full stack development, proper use of OOP, using APIs, creating and optimising ML models, 
-            using phone hardware (GPS and Cameras), data clearning & management, user-friendly and intuitive design, all while maintaining that the stakeholders are satisfied.
-            <br><br>
+            <a class="link" href="projects/melanomaScan.html"> <b>[Read more]</b></a>
           </p>
-          <div class="relative" style="padding-top: 56.25%">
-            <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mePFA-zkgVY?si=wm_IywaCvtiENVAc" frameborder="0" …></iframe>
-          </div>
         </div>
 
 
         <div class="ml-8 w-1/3">
-          <div class="flex w-1/2">
-            <img src="./assets/MelanomaScan/home_screen.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-            <img src="./assets/MelanomaScan/malignant_classification.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-          </div>
-          <div class="flex w-1/2">
-            <img src="./assets/MelanomaScan/environmental_risks.png" alt="Work 1" class="w-full h-auto bg-gray-300">
-            <img src="./assets/MelanomaScan/phenotype_risk.png" alt="Work 1" class="w-full h-auto bg-gray-300">
+          <div class="relative" style="padding-top: 56.25%">
+            <iframe class="absolute inset-0 w-full h-full" src="https://www.youtube.com/embed/mePFA-zkgVY?si=wm_IywaCvtiENVAc" frameborder="0" …></iframe>
           </div>
         </div>
-
-
-
+      </div>
       </div>
 
       <!-- Singh Lab -->
-
+      <div>
       <div class="flex items-center mt-10">
         <div class="flex-grow border-t-2 border-black mr-4"></div> <!-- Horizontal line on the left -->
         <h2 class="text-3xl font-bold pt-4">02_Machine Learning for Proteins and Drug Discovery</h2>
@@ -169,9 +157,10 @@
         </div>
 
       </div>
+      </div>
 
       <!-- SOLAR PANEL ARDUINO -->
-
+      <div>
       <div class="flex items-center mt-10">
         <h2 class="text-3xl font-bold pt-4">03_Solar Panel Dust Sensor</h2>
         <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
@@ -182,7 +171,7 @@
         <div class="w-2/3">
           <p class="mt-6 text-xl"> <!-- Added top padding to the text content -->
             Solar panels are an emerging source of renewable energy, 
-            but they accumulate dust that decreases their efficiency significantly. 
+            but they often accumulate dust during use that decreases their efficiency significantly. 
             Our team designed a solar panel dirtiness sensor for Dr. Mike Bergin (Duke University Professor) 
             and Michael Valerino (Duke University PhD Student) to determine when solar panels require cleaning, 
             in order to maximize energy output.
@@ -255,11 +244,10 @@
             that is bringing vertical farms to urban cities, making produce much more environmentally friendly and healthier.
             <br><br>
             I collaborated directly with CTO to convert applications (a platform for farm resource management 
-            and allocation and models to optimise hydroponics) from prototype to production stage.
+            and allocation and models to optimise hydroponics) from prototype to production stage. 
             <br><br>
-            Transferred app from obsolete technologies to Mantine v7, hosting on fly.io with staging and 
-            production environments; Connected environments to postgres SQL database; Refactored old React 
-            code into new environments
+            I learnt a lot about prototyping and creating demos and minimum viable products by any means possible throughout 
+            this internship. It often involved learning technologies in an extremely niche and specific way in order to get something to work. 
           </p>
           <div class="flex justify-center items-center pt-12"> 
             <img src="assets/Raiz/InvestmentPlatform.png" alt="Work 1" class="w-1/2">
