--- a/projects/melanomaScan.html
+++ b/projects/melanomaScan.html
@@ -33,7 +33,7 @@
   <!-- Resume Embed Section -->
   <section class="container mx-auto px-4 py-20">
     <div class="flex flex-col items-left">
-      <h1 class="text-4xl font-bold">Melanoma_Scan</h1>
+      <h1 class="text-4xl font-bold border-b-2 border-black mb-5 mt-5">Melanoma Scan</h1>
       <p></p>
         <!-- MELANOMA SCAN -->
 
