--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
   <section class="container mx-auto px-4 py-20">
     <div class="flex flex-col items-left">
       <h1 class="text-4xl font-bold">Resume</h1>
-      <p class="mt-6 text-xl mb-8">This was last updated on the 26th of December '23.</p>
+      <p class="mt-6 text-xl mb-8">This was last updated on the <b>26th of December '23.</b></p>
       <iframe
       src="./assets/resumes/ShaanYadav_December23.pdf"
       frameborder="0"
