projects section layout

--- a/index.html
+++ b/index.html
@@ -58,16 +58,24 @@
         <p class="text-xl">
           <ul class="text-lg">
             <li><a class="link" href="./projects.html"><b>» Large Projects </b></a>
-                a collection of more formal, larger projects.
+                is a collection of more formal, larger projects.
             </li>
 
             <li><a class="link" href="./musings.html"><b>» Quaint Projects </b></a>
-                a collection of small projects I've worked on for fun, usually to learn some new concept.
+                is a collection of small projects I've worked on for fun, usually to learn some new concept.
             </li>
 
             <li><a class="link" href="./resume.html"><b>» Resume </b></a>
-                a somewhat updated copy of my resume.
+                is a somewhat updated copy of my resume.
             </li>
+
+            <li>
+              » My 
+              <a class="link" href="https://github.com/Shaan106"><b>Github </b></a>
+              and 
+              <a class="link" href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug"><b>YouTube </b></a>
+              also showcase some things I've made.
+          </li>
           </ul>
         </p>
 
