--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
 <body class="font-serif antialiased text-gray-900 bg-white">
 
   <!-- Header -->
-  <header class="fixed top-0 w-full z-50 bg-white shadow-md">
+  <header class="top-0 w-full z-50 bg-white shadow-md">
     <nav class="container mx-auto px-4 py-4 flex justify-between">
       <div>
         <a href="index.html" class="text-2xl font-semibold">Shaan Yadav</a>
@@ -32,7 +32,7 @@
   
 <section id="projects" class="container mx-auto px-4 py-15">
 
-    <h2 class="text-5xl font-bold mt-20 border-b-4 border-black">a few projects.</h2>
+    <h2 class="text-5xl font-bold mt-5 border-b-4 border-black">a few projects.</h2>
     <p class="text-xl mt-5">
       Here are a few projects I have done, that are a bit longer and more formally documented.
       <br>
@@ -44,34 +44,98 @@
     <div id="link_wrapper"> 
 
       <!-- Boids_FPGA -->
-      <a class="link" href="#melanoma_scan">
-        <div class="flex items-center mt-5">
-          <h2 class="text-3xl font-bold pt-4">Boids_FPGA</h2>
-          <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
-          <!-- for if I want to add a date below -->
-          <!-- <p class="text-gray-700">&nbsp 2024</p> -->
+      <div id="boids_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-5">
+            <h2 class="text-3xl font-bold pt-4">
+              ∆ Boids_FPGA 
+            </h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- for if I want to add a date below -->
+            <!-- <p class="text-gray-700">&nbsp 2024</p> -->
+          </div>
+        </a>
+        <div class="flex items-center mt-2">
+          <p>A hardware level implementation of the boids algorithm.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
         </div>
-      </a>
-      <div class="flex items-center mt-2">
-        <p>A hardware level implementation of the boids algorithm.</p>
-        <div class="flex-grow border-t-2 border-white mr-4"></div>
+      </div>
+
+      <!-- Verilog_MIPS_CPU -->
+      <div id="Verilog_CPU_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-1">
+            <h2 class="text-3xl font-bold pt-4">⌘ Verilog_MIPS_CPU</h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          </div>
+        </a>
+        <div class="flex items-center mt-1">
+          <p>A fully functioning 5 stage, pipelined, bypassed CPU made in verilog from the ground up.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+        </div>
       </div>
 
       <!-- Melanoma_Scan -->
-      <a class="link" href="#melanoma_scan">
+      <div id="melanoma_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-1">
+            <h2 class="text-3xl font-bold pt-4">ꐠ Melanoma_Scan</h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          </div>
+        </a>
         <div class="flex items-center mt-1">
-          <h2 class="text-3xl font-bold pt-4">Melanoma_Scan</h2>
-          <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
-          <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          <p>An ios app that can detect skin cancer, and provide important environmental and location based information for melanoma.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
         </div>
-      </a>
-      <div class="flex items-center mt-1">
-        <p>An ios app that can detect skin cancer, and provide important environmental and location based information for melanoma.</p>
-        <div class="flex-grow border-t-2 border-white mr-4"></div>
       </div>
 
+      <!-- Solar_Panel_Dust_Sensor -->
+      <div id="solar_dust_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-1">
+            <h2 class="text-3xl font-bold pt-4">☼ Solar_Panel_Dust_Sensor</h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          </div>
+        </a>
+        <div class="flex items-center mt-1">
+          <p>A cost-effective arduino project to detect dust on solar panels.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+        </div>
+      </div>
 
-  
+      <!-- Prosthesics Camp -->
+      <div id="prosthetics_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-1">
+            <h2 class="text-3xl font-bold pt-4">ꐕ Prosthesis</h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          </div>
+        </a>
+        <div class="flex items-center mt-1">
+          <p>An initiative to provide prosthetic limbs to those most in need.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+        </div>
+      </div>
+
+      <!-- Prosthesics Camp -->
+      <div id="prosthetics_link">
+        <a class="link" href="#melanoma_scan">
+          <div class="flex items-center mt-1">
+            <h2 class="text-3xl font-bold pt-4">∮ Brewing_Concoctions</h2>
+            <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
+            <!-- <p class="text-gray-700">&nbsp 2022</p> -->
+          </div>
+        </a>
+        <div class="flex items-center mt-1">
+          <p>A few larger projects currently in the works.</p>
+          <div class="flex-grow border-t-2 border-white mr-4"></div>
+        </div>
+      </div>
+
       <!-- code for if I want it on the right -->
       <!-- <a class="link" href="#melanoma_scan">
         <div class="flex items-center mt-5">
@@ -84,6 +148,8 @@
         <p>sine norerebiabr ebauirb</p>
       </div> -->
       
+      <h2 class="text-5xl font-bold mt-5 border-t-4 border-black">&nbsp</h2>
+
     </div>
     
    
