up to dust detection in projects

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- IDEAS -->
+<!-- mini blog like section -->
+<!-- add like rock climbing sends on there, other stuff? -->
+<!-- call it "some musings" -->
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +47,7 @@
           
           <br> <br>
 
-          I'm currently a sophomore at Duke, interested in making things with code.
+          I'm currently an undergrad at Duke, interested in making things with code.
           <br>
           I'm particularly interested in research to do with hardware and chip design.
 
