--- a/melanomaScanDocumentation.html
+++ b/melanomaScanDocumentation.html
@@ -40,7 +40,7 @@
       src="./assets/MelanomaScan/Melanoma App - Final Version.pdf"
       frameborder="0"
       width="100%"
-      style="height:100vh;" <!-- This will make the iframe take the full height of the viewport -->
+      style="height:100vh;"
       class="w-full bg-white"
       allow="autoplay"
     ></iframe>
