--- a/projects/melanomaScan.html
+++ b/projects/melanomaScan.html
@@ -30,13 +30,12 @@
     </nav>
   </header>
 
-  <!-- Resume Embed Section -->
+  
   <section class="container mx-auto px-4 py-20">
+    <!-- Melanoma Scan -->
     <div class="flex flex-col items-left">
       <h1 class="text-4xl font-bold border-b-2 border-black mb-5 mt-5">Melanoma Scan</h1>
       <p></p>
-        <!-- MELANOMA SCAN -->
-
   <div class="flex">
     <div class="w-2/3">
       <p class="mt-0 text-xl pt-0"> <!-- Added top padding to the text content -->
