--- a/musings.html
+++ b/musings.html
@@ -21,10 +21,10 @@
     <header class="fixed top-0 w-full z-50 bg-white shadow-md">
         <nav class="container mx-auto px-4 py-4 flex justify-between">
                 <div>
-                        <a href="index.html" class="text-3xl font-semibold">Shaan Yadav</a>
+                        <a href="index.html" class="text-3xl font-semibold link">Shaan Yadav</a>
                     </div>
                     <div>
-                        <a href="index.html#about" class="text-lg">Home</a>
+                        <a href="index.html#about" class="text-lg link">Home</a>
                     </div>
         </nav>
     </header>
@@ -49,11 +49,11 @@
                 <div class="p-6 flex flex-col flex-grow">
                     <h2 class="text-xl font-bold mb-2">CUDA is very fast</h2>
                     <p class="text-gray-700 mb-2">
-                        CUDA in C is indeed very fast. I see why people use it.
+                        CUDA in C is indeed very fast.
                     </p>
                     <p class="text-gray-700 mb-2">
                         I learnt how to write CUDA code for C, deal with memory allocation and transfer, how to write kernels.
-                        The speedup compared to a CPU implementation of a 3 body problem I wrote was ~70x, which was quite surprising.
+                        The speedup compared to a CPU implementation of a 3 body problem I wrote was ~70x, which was very impressive.
                     </p>
                     <p class="text-gray-700 mb-2">
                        Initial motivation was to significantly speed up the 
