--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
   <header class="fixed top-0 w-full z-50 bg-white shadow-md">
     <nav class="container mx-auto px-4 py-4 flex justify-between">
       <div>
-        <a href="index.html" class="text-2xl font-semibold">Shaan Yadav</a>
+        <a href="index.html" class="text-2xl font-semibold link">Shaan Yadav</a>
       </div>
       <div>
-        <a href="#about" class="text-lg">About</a>
-        <a href="projects.html" class="text-lg ml-6">Projects</a>
-        <a href="musings.html" class="text-lg ml-6">Quaint Projects</a>
-        <a href="resume.html" class="text-lg ml-6">Resume</a>
+        <a href="#about" class="text-lg link">About</a>
+        <a href="projects.html" class="text-lg ml-6 link">Projects</a>
+        <a href="musings.html" class="text-lg ml-6 link">Quaint Projects</a>
+        <a href="resume.html" class="text-lg ml-6 link">Resume</a>
       </div>
     </nav>
   </header>
