--- a/resume.html
+++ b/resume.html
@@ -22,10 +22,10 @@
   <header class="fixed top-0 w-full z-50 bg-white shadow-md">
     <nav class="container mx-auto px-4 py-4 flex justify-between">
         <div>
-            <a href="index.html" class="text-3xl font-semibold">Shaan Yadav</a>
+            <a href="index.html" class="text-3xl font-semibold link">Shaan Yadav</a>
           </div>
           <div>
-            <a href="index.html#about" class="text-lg">Home</a>
+            <a href="index.html#about" class="text-lg link">Home</a>
           </div>
     </nav>
   </header>
