--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
         <p class="text-xl">
           <ul class="text-lg">
             <li><a class="link" href="./projects.html"><b>» Large Projects </b></a>
-                is a collection of more formal, larger projects.
+                is a collection of projects that I've documented more formally.
             </li>
 
             <li><a class="link" href="./musings.html"><b>» Quaint Projects </b></a>
-                is a collection of small projects I've worked on for fun, usually to learn some new concept.
+                is a collection of projects I've worked on for fun, usually to learn some new concept.
             </li>
 
             <li><a class="link" href="./resume.html"><b>» Resume </b></a>
