--- a/musings.html
+++ b/musings.html
@@ -33,8 +33,8 @@
     <section class="container mx-auto px-4 mt-20">
         <div class="flex flex-col items-left">
             <h1 class="text-4xl font-bold border-b-2 border-black">Some Vaguely Interesting Stuff.</h1>
-            <p class="mt-6 text-lg mb-5">Sometimes I have find things that I think are quite interesting,
-                                        I will try to document some interesting things I learn onto here.
+            <p class="mt-6 text-lg mb-5">Sometimes I have find things that I think are quite interesting
+                                        and try to understand them.
                                         <br>
                                         Inspired by <a href="mitxela.com" class="link"><u>mitxela.com</u></a></p>
         </div>
@@ -132,6 +132,15 @@
                         [empty]
                         <br>
                         maybe add a table of contents?
+                        <ul>
+                            <li>- Conplex</li>
+                            <li>- CONTAM Air Pol simulation</li>
+                            <li>- Quantum Teleportation project</li>
+                            <li>- Work w Palantir</li>
+                            <li>- Raiz Farms work</li>
+                            <li>- NewsPal (+ Hoberman Prize)</li>
+                            <li>- Comp Arch course</li>
+                        </ul>
                     </p>
                     <p class="text-gray-500 text-sm mt-auto">soon</p>
                     <a href="https://github.com/Shaan106/" class="link flex items-center text-sm">
