--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
 
       <!-- Prosthesics Camp -->
       <div id="prosthetics_link">
-        <a class="link" href="#melanoma_scan">
+        <a class="link" href="#prosthesis">
           <div class="flex items-center mt-1">
             <h2 class="text-3xl font-bold pt-4">ꐕ Prosthesis</h2>
             <div class="flex-grow border-t-2 border-black ml-4"></div> <!-- Horizontal line -->
@@ -336,7 +336,7 @@
     </div>
 
 
-          <!-- SOLAR PANEL ARDUINO -->
+      <!-- SOLAR PANEL ARDUINO -->
       <div id="solar_panel_dust">
       <div class="flex items-center mt-10">
         <h2 class="text-3xl font-bold pt-4">☼ Solar_Panel_Dust_Sensor</h2>
@@ -371,6 +371,30 @@
         </div>
       </div>
       </div>
+
+      <!-- PROSTHETICS -->
+      <div id="prosthesis">
+        <div class="flex items-center mt-10">
+          <h2 class="text-3xl font-bold pt-4">ꐕ Prosthesis</h2>
+          <div class="flex-grow border-t-2 border-black ml-4"></div> 
+        </div>
+  
+  
+        <div class="flex">
+          <div class="w-2/3">
+            <p class="mt-6 text-lg"> <!-- Added top padding to the text content -->
+              [to finish]
+            </p>
+            <div class="flex justify-center items-center w-full">
+              <img src="temp" alt="Work 1" class="w-2/5 h-auto max-w-full bg-gray-300">
+          </div>
+          </div>
+          <div class="w-1/3 ml-8">
+            <img src="temp" alt="Work 1" class="w-full h-auto bg-gray-300">
+            <img src="temp" alt="Work 1" class="w-full h-auto bg-gray-300">
+          </div>
+        </div>
+        </div>
 
       
       <!-- ------------------------ OLD CONTENT ----------------------------------- -->
