--- a/projects.html
+++ b/projects.html
@@ -250,7 +250,7 @@
             <br>
             This CPU came out of the Digital Systems course at Duke University. It is a fully functioning 5 stage, pipelined, bypassed, error handling MIPS CPU. Its instruction set can be seen here on the right.
             <br><br>
-            I have included a diagram (end of this section) I made while creating the CPU to show the scale of the datapath, not including the intrecacies of each componenet (such as the wallace tree multiplier not being drawn out for obvious reasons). Some features are highlighted below:
+            I have included a diagram (end of this section) I made while creating the CPU to show the scale of the datapath, not including the intricacies of each component (such as the wallace tree multiplier not being drawn out for obvious reasons). Some features are highlighted below:
             <br><br>  
             <ul>
               <li class="text-base">» 32-bit 100MHz processor</li>
