sep 21 rambling update

--- a/resume.html
+++ b/resume.html
@@ -34,12 +34,12 @@
   <section class="container mx-auto px-4 py-20">
     <div class="flex flex-col items-left">
       <h1 class="text-4xl font-bold">Resume</h1>
-      <p class="mt-6 text-xl mb-8">This was last updated on the <b>6th of June '24.</b></p>
+      <p class="mt-6 text-xl mb-8">This was last updated on the <b>21st of September '24.</b></p>
       <iframe
-      src="./assets/resumes/ShaanYadav_June24_CV.pdf"
+      src="./assets/resumes/ShaanYadav_Sep24_Resume.pdf"
       frameborder="0"
       width="100%"
-      style="height:100vh;" <!-- This will make the iframe take the full height of the viewport -->
+      style="height:100vh;" 
       class="w-full bg-white"
       allow="autoplay"
     ></iframe>
