--- a/musings.html
+++ b/musings.html
@@ -32,7 +32,7 @@
     <!-- Musings section -->
     <section class="container mx-auto px-4 mt-20">
         <div class="flex flex-col items-left">
-            <h1 class="text-4xl font-bold border-b-2 border-black">Some Vaguely Interesting Stuff.</h1>
+            <h1 class="text-4xl font-bold border-b-2 border-black">Cool Engineering Stuff.</h1>
             <p class="mt-6 text-lg mb-5">Sometimes I have find things that I think are quite interesting
                                         and try to understand them.
                                         <br>
