--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div>
         <a href="#about" class="text-lg link">About</a>
         <a href="projects.html" class="text-lg ml-6 link">Projects</a>
-        <a href="musings.html" class="text-lg ml-6 link">Quaint Projects</a>
+        <a href="musings.html" class="text-lg ml-6 link">Hobbyist Projects</a>
         <a href="resume.html" class="text-lg ml-6 link">Resume</a>
       </div>
     </nav>
@@ -62,7 +62,7 @@
         <p class="text-xl">
           <ul class="text-lg">
 
-            <li><a class="link" href="./musings.html"><b>» Quaint Projects </b></a>
+            <li><a class="link" href="./musings.html"><b>» Hobbyist Projects </b></a>
               is a collection of projects I've worked on for fun, usually to learn some new concept. <br>
               &nbsp; &nbsp; &nbsp; &nbsp;
               &nbsp; &nbsp; &nbsp; &nbsp;
@@ -77,7 +77,7 @@
             </li>
 
             <li><a class="link" href="./resume.html"><b>» Resume </b></a>
-                is a somewhat updated copy of my resume.
+                is a copy of my resume.
             </li>
 
             <li>
