--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div>
         <a href="#about" class="text-lg link">About</a>
         <a href="projects.html" class="text-lg ml-6 link">Projects</a>
-        <a href="musings.html" class="text-lg ml-6 link">Hobbyist Projects</a>
+        <a href="musings.html" class="text-lg ml-6 link">Random Things</a>
         <a href="resume.html" class="text-lg ml-6 link">Resume</a>
       </div>
     </nav>
@@ -49,15 +49,13 @@
   <!-- Hero Section -->
   <section id="about" class="container mx-auto px-4 py-7 mt-20">
       <div class="">
-        <h1 class="text-6xl font-bold">Hi, I'm Shaan.<br> And I like to build things.</h1>
+        <h1 class="text-6xl font-bold">Hi, I'm Shaan.</h1>
         <p class="mt-6 text-2xl">
           I made this website to show a few projects I have worked on that I otherwise don't get to. 
           
           <br> <br>
 
-          I'm currently an undergrad at Duke, interested in making things with code.
-          <br>
-          I'm particularly interested in research to do with hardware and chip design.
+          I'm currently an undergrad at Duke, interested in anything to do with hardware and chip design.
 
           <br> <br>
 
@@ -71,17 +69,11 @@
         <p class="text-xl">
           <ul class="text-lg">
 
-            <li><a class="link" href="./musings.html"><b>» Hobbyist Projects </b></a>
-              is a collection of projects I've worked on for fun, usually to learn some new concept. <br>
-              &nbsp; &nbsp; &nbsp; &nbsp;
-              &nbsp; &nbsp; &nbsp; &nbsp;
-              &nbsp; &nbsp; &nbsp; &nbsp;
-              &nbsp; &nbsp; &nbsp; &nbsp;
-              &nbsp; &nbsp;  
-              Or it's just me writing some thoughts down because I thought it was somewhat interesting.
+            <li><a class="link" href="./musings.html"><b>» Random Things </b></a>
+              is a collection of projects I did that seemed somewhat interesting.
             </li>
 
-            <li><a class="link" href="./projects.html"><b>» Large Projects </b></a>
+            <li><a class="link" href="./projects.html"><b>» Projects </b></a>
                 is a collection of projects that I've documented more formally (hope to document more soon).
             </li>
 
@@ -95,7 +87,12 @@
               and 
               <a class="link" href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug"><b>YouTube </b></a>
               also showcase some things I've made.
-          </li>
+            </li>
+
+            <li>
+              » I also really like books and document my reading on 
+              <a class="link" href="https://www.goodreads.com/user/show/178092150-shaan"><b>Goodreads</b></a>.
+            </li>
           </ul>
         </p>
 
@@ -106,30 +103,24 @@
   <!-- Links section -->
 
   <section class="container mx-auto px-4 py-0 pb-10 mb-10 text-center">
-    <div class="flex justify-left space-x-4">
+    <div class="flex flex-col items-start space-y-4">
+
+      <!-- Email -->
+      <a href="" class="link flex items-center space-x-2 text-xl">
+        <i class="fas fa-envelope fa-lg"></i>
+        <span class="text-lg">shaan dot yadav at duke dot edu</span>
+      </a>
 
       <!-- GitHub -->
       <a href="https://github.com/Shaan106" class="link flex items-center space-x-2 text-xl">
-        <span class="text-lg">GitHub</span>
         <i class="fab fa-github fa-lg"></i>
+        <span class="text-lg">GitHub</span>
       </a>
-
-      <!-- YouTube -->
-      <a href="https://www.youtube.com/channel/UC5ODxBVQlb0qzFhBr1LJ4ug" class="link flex items-center space-x-2 text-xl">
-        <span class="text-lg">YouTube</span>
-        <i class="fab fa-youtube fa-lg"></i>
-      </a>
-
-      <!-- Email
-      <a href="index.html" class="link flex items-center space-x-2 text-xl">
-        <span class="text-lg">shaan.yadav(at)duke.edu</span>
-        <i class="fas fa-envelope fa-lg"></i>
-      </a> -->
 
       <!-- LinkedIn -->
       <a href="https://www.linkedin.com/in/shaanyadav/" class="link flex items-center space-x-2 text-xl">
-        <span class="text-lg">LinkedIn</span>
         <i class="fab fa-linkedin fa-lg"></i>
+        <span class="text-lg">LinkedIn</span>
       </a>
 
     </div>
