--- a/musings.html
+++ b/musings.html
@@ -45,7 +45,7 @@
             <p class="mt-6 text-lg mb-5">Sometimes I have find things that I think are quite interesting
                                         and try to understand them.
                                         <br>
-                                        Inspired by <a href="mitxela.com" class="link"><u>mitxela.com</u></a></p>
+                                        Inspired by <a href="https://mitxela.com" class="link"><u>mitxela.com</u></a></p>
         </div>
     </section>
 
